force-app/main/default/objects/maps__TPUserPreference__c/maps__TPUserPreference__c.object-meta.xml
<CustomObject>
    <label>Territory Planning User Preference</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>AutoId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Planning User Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>