force-app/main/default/objects/maps__TPUserPreference__c/fields/maps__Access__c.field-meta.xml
<CustomField>
    <fullName>maps__Access__c</fullName>
    <label>Access</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Editor</fullName>
            </value>
            <value>
                <fullName>Commenter</fullName>
                <default>true</default>
                <label>Commenter</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>