force-app/main/default/objects/maps__TPUserPreference__c/fields/maps__Alignment__c.field-meta.xml
<CustomField>
    <fullName>maps__Alignment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Alignment</label>
    <referenceTo>maps__TPAlignment__c</referenceTo>
    <relationshipLabel>User Preferences</relationshipLabel>
    <relationshipName>UserPreferences</relationshipName>
    <type>Lookup</type>
</CustomField>