force-app/main/default/objects/maps__TPUserPreference__c/fields/maps__Area__c.field-meta.xml
<CustomField>
    <fullName>maps__Area__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Area</label>
    <referenceTo>maps__TPArea__c</referenceTo>
    <relationshipLabel>User Preferences</relationshipLabel>
    <relationshipName>UserPreferences</relationshipName>
    <type>Lookup</type>
</CustomField>