force-app/main/default/objects/maps__TPUserPreference__c/fields/maps__Preferences__c.field-meta.xml
<CustomField>
    <fullName>maps__Preferences__c</fullName>
    <label>Preferences</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>